[package]
name = "konf"
version = "0.1.0"
edition = "2021"
authors = ["Nick Wanninger"]
description = "A standalone Kconfig configuration system"
license = "GPL-2.0"
keywords = ["config", "kconfig"]

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
logos = "0.12.0"
indexmap = "1.8.0"
